--- a/src/components/todoinput.css
+++ b/src/components/todoinput.css
@@ -20,12 +20,12 @@ input{
     border-bottom: 2px solid blueviolet;
     margin-right: 10px;
     padding: 5px;
-    line-height: 17px;
+    line-height: 15px;
 }
 
 input:focus{
     outline: none;
     border: none;
-    border-top: 2px solid blanchedalmond;
-    border-bottom: blueviolet;
+    border-top: 2px solid blueviolet;
+    border-bottom: 2px solid blueviolet;
 }
